--- a/src/app/admin/managevaccines/managevaccines.component.html
+++ b/src/app/admin/managevaccines/managevaccines.component.html
@@ -16,7 +16,7 @@
         <div class="cell">
           ID
         </div>
-        <button (click)="opendialog()">Creat new</button>
+        <button (click)="openCreateDialog()">Creat new</button>
 
       </div>
       
@@ -81,5 +81,42 @@
 <button mat-dialog-close="yes">YES</button>
 <button mat-dialog-close="cancel">CANCEL</button>
 
+</ng-template >
 
+
+<ng-template #callCreateDailog>
+<h2 mat-dialog-title>Add vaccine</h2>
+<mat-dialog-content class="mat-typography">
+   <form class="example-form" [formGroup]="createForm" >
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>vaccine Name</mat-label>
+      <input type="text" matInput formControlName="vaccinename">
+      <mat-error *ngIf="createForm.controls['vaccinename'].hasError('required')">
+        vaccinename is <strong>required</strong>
+      </mat-error>
+    </mat-form-field> 
+
+<br>
+<mat-form-field class="example-full-width" appearance="fill">
+  <mat-label>vaccine Doses</mat-label>
+  <input type="number" matInput formControlName="vaccinedoses">
+  <mat-error *ngIf="createForm.controls['vaccinedoses'].hasError('required')">
+    vaccinedoses is <strong>required</strong>
+  </mat-error>
+</mat-form-field>
+      <br>
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>vaccine EXP</mat-label>
+        <input type="date" matInput formControlName="vaccineexp">
+        <mat-error *ngIf="createForm.controls['vaccineexp'].hasError('required')">
+          vaccineexp is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <br>
+    </form>
+</mat-dialog-content>
+<mat-dialog-actions >
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button (click)="saveCREATEData()" [mat-dialog-close]="true" cdkFocusInitial  >Save</button>
+</mat-dialog-actions>
 </ng-template>
