--- a/src/app/admin/doctor/doctor.component.html
+++ b/src/app/admin/doctor/doctor.component.html
@@ -1,4 +1,3 @@
-
 <link href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" />
 <nav class="pcoded-navbar">
@@ -27,7 +26,6 @@
                 <li class="nav-item">
                     <a  routerLink="/admin/doctor" class="nav-link "><span class="pcoded-micon"><i class="feather icon-server"></i></span><span class="pcoded-mtext">Doctor</span></a>
                 </li>
-                
                 
 
                 <li class="nav-item">
@@ -86,7 +84,7 @@
         <th scope="col"> Name</th>
         <th scope="col">user Name</th>
         <th scope="col">Phone Number</th>
-        <th scope="col">Num Vaccines</th>
+       
        
         <th scope="col">Email</th>
         <th scope="col">Password</th>
@@ -98,14 +96,13 @@
 
       </tr>
     </thead>
-    <tbody *ngFor="let obj of user.User">
+    <tbody *ngFor="let obj of user.doctor">
       <tr>
         <th scope="row"></th>
         
         <td>{{obj.fullname}}</td>
         <td>{{obj.username}}</td>
         <td>{{obj.phonenumber}}</td>
-        <td>{{obj.numberofvaccines}}</td>
        
 
         <td>{{obj.email}}</td>
@@ -135,103 +132,103 @@
 
 
 
+
 <ng-template #callUpdateDailog>
 
-<mat-dialog-content class="mat-typography">
-    <form class="example-form" [formGroup]="updateForm" >
-        <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label> Name </mat-label>
-            <input type="text" matInput formControlName="fullname"
-            [(ngModel)]="p_data.fullname"
-            >
-            
-            <mat-error *ngIf="updateForm.controls['fullname'].hasError('required')">
-            Name  <strong>required</strong>
-            </mat-error>
-        </mat-form-field>
-        <br>
-        <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>User Name</mat-label>
-            <input type="text" matInput formControlName="username"
-            [(ngModel)]="p_data.username"
-            >
-            
-            <mat-error *ngIf="updateForm.controls['username'].hasError('required')">
-                User Name  <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-
-
+    <mat-dialog-content class="mat-typography">
+        <form class="example-form" [formGroup]="updateForm" >
             <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Phone Number</mat-label>
-            <input type="number" matInput formControlName="phonenumber"
-            [(ngModel)]="p_data.phonenumber"
-            >
-            
-            <mat-error *ngIf="updateForm.controls['phonenumber'].hasError('required')">
-                Phone Number <strong>required</strong>
-            </mat-error>
+                <mat-label> Name </mat-label>
+                <input type="text" matInput formControlName="fullname"
+                [(ngModel)]="p_data.fullname"
+                >
+                
+                <mat-error *ngIf="updateForm.controls['fullname'].hasError('required')">
+                Name  <strong>required</strong>
+                </mat-error>
             </mat-form-field>
             <br>
             <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Email</mat-label>
-            <input type="text" matInput formControlName="email"
-            [(ngModel)]="p_data.email">
-            
-            <mat-error *ngIf="updateForm.controls['email'].hasError('required')">
-                Email  <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-            
-            <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Password</mat-label>
-            <input type="text" matInput formControlName="password"
-            [(ngModel)]="p_data.password">
-            
-            <mat-error *ngIf="updateForm.controls['password'].hasError('required')">
-                Password <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-            
-            <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Age</mat-label>
-            <input type="number" matInput formControlName="age"
-            [(ngModel)]="p_data.age">
-            
-            <mat-error *ngIf="updateForm.controls['age'].hasError('required')">
-                Age <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-            <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Role id</mat-label>
-            <input type="number" matInput formControlName="roleid"
-            [(ngModel)]="p_data.roleid">
-            
-            <mat-error *ngIf="updateForm.controls['roleid'].hasError('required')">
-                Role id <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
+                <mat-label>User Name</mat-label>
+                <input type="text" matInput formControlName="username"
+                [(ngModel)]="p_data.username"
+                >
+                
+                <mat-error *ngIf="updateForm.controls['username'].hasError('required')">
+                    User Name  <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+                <br>
+    
+    
+                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Phone Number</mat-label>
+                <input type="number" matInput formControlName="phonenumber"
+                [(ngModel)]="p_data.phonenumber"
+                >
+                
+                <mat-error *ngIf="updateForm.controls['phonenumber'].hasError('required')">
+                    Phone Number <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+                <br>
+                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Email</mat-label>
+                <input type="text" matInput formControlName="email"
+                [(ngModel)]="p_data.email">
+                
+                <mat-error *ngIf="updateForm.controls['email'].hasError('required')">
+                    Email  <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+                <br>
+                
+                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Password</mat-label>
+                <input type="text" matInput formControlName="password"
+                [(ngModel)]="p_data.password">
+                
+                <mat-error *ngIf="updateForm.controls['password'].hasError('required')">
+                    Password <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+                <br>
+                
+                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Age</mat-label>
+                <input type="number" matInput formControlName="age"
+                [(ngModel)]="p_data.age">
+                
+                <mat-error *ngIf="updateForm.controls['age'].hasError('required')">
+                    Age <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+                <br>
+                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Role id</mat-label>
+                <input type="number" matInput formControlName="roleid"
+                [(ngModel)]="p_data.roleid">
+                
+                <mat-error *ngIf="updateForm.controls['roleid'].hasError('required')">
+                    Role id <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+                <br>
+    
+                <input type="file" #file formControlName="image" [(ngModel)]="p_data.image" (change)="uploadfile(file.files)"> 
+        </form>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+        <button mat-button mat-dialog-close>Cancel</button>
+        <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="savedata()">Save</button>
+    </mat-dialog-actions>
+    
+    
+    
+    
+    </ng-template>
 
-            <input type="file" #file formControlName="image" [(ngModel)]="p_data.image" (change)="uploadfile(file.files)"> 
-    </form>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="savedata()">Save</button>
-</mat-dialog-actions>
-
-
-
-
-</ng-template>
-
-
-
+    
 <ng-template #callDeleteDailog>
 
     <h2> Are you want to delete this item ?</h2>
