--- a/src/app/doctor/manage-vaccine/manage-vaccine.component.html
+++ b/src/app/doctor/manage-vaccine/manage-vaccine.component.html
@@ -1,5 +1,4 @@
-
-<link href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css" rel="stylesheet" />
+ <link href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" />
 <nav class="pcoded-navbar">
     <div class="navbar-wrapper">
@@ -55,8 +54,7 @@
         </div>
     </div>
 </nav>
-<!-- [ navigation menu ] end -->
-<!-- [ Header ] start -->
+
 <header class="navbar pcoded-header navbar-expand-lg navbar-light">
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse1" href="javascript:"><span></span></a>
@@ -77,22 +75,33 @@
         <div class="pcoded-content">
             <div class="pcoded-inner-content">
 
-                
-<button (click)="opendialog()">Create New</button>
+                 
+<!-- <button (click)="opendialog()">Create New</button> -->
+<form class="form-inline" style="margin-top: 3%;">
+<div class="form-group mx-sm-3 mb-2">
+<label for="inputText" class="sr- only">Sarech User : </label>
+<input type="number" class="form-control" placeholder="search.." [value]="num" (change)="searchInput($event)" >
+</div> 
+<button type="submit"  class="btn btn-success"
+ (click)="Search()">Search</button>
+</form>
+
+
 <table  class="table table-striped">
     <thead>
       <tr>
         <th scope="col">#</th>
+        <th scope="col"> ID</th>
         <th scope="col"> Name</th>
-        <th scope="col">user Name</th>
+       
         <th scope="col">Phone Number</th>
         <th scope="col">Num Vaccines</th>
        
         <th scope="col">Email</th>
-        <th scope="col">Password</th>
+       
         <th scope="col">Age</th>
-        <th scope="col">Role ID</th>
-        <th scope="col">Image</th>
+       
+        
 
 
 
@@ -101,23 +110,23 @@
     <tbody *ngFor="let obj of user.User">
       <tr>
         <th scope="row"></th>
-        
+        <td>{{obj.userid}}</td>
         <td>{{obj.fullname}}</td>
-        <td>{{obj.username}}</td>
+       
         <td>{{obj.phonenumber}}</td>
         <td>{{obj.numberofvaccines}}</td>
        
 
         <td>{{obj.email}}</td>
-        <td>{{obj.password}}</td>
+        
         <td>{{obj.age}}</td>
-        <td>{{obj.roleid}}</td>
-        <td><img src="../../../assets/images/{{obj.image}}" width="100" height="100">
-        </td>
+       
+        
         
         <td>
         <button (click)="openUpdateDailog(obj)">Update</button>
          <button (click)="openDeleteDailog(obj.userid)">Delete</button> 
+         <button>Send Email</button>
 
         </td>
 
@@ -127,111 +136,46 @@
     </tbody>
   </table>
 
-                
+              
             </div>
         </div>
     </div>
-</div>
+</div> 
+
+
 
 
 
 <ng-template #callUpdateDailog>
 
-<mat-dialog-content class="mat-typography">
-    <form class="example-form" [formGroup]="updateForm" >
-        <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label> Name </mat-label>
-            <input type="text" matInput formControlName="fullname"
-            [(ngModel)]="p_data.fullname"
-            >
-            
-            <mat-error *ngIf="updateForm.controls['fullname'].hasError('required')">
-            Name  <strong>required</strong>
-            </mat-error>
-        </mat-form-field>
-        <br>
-        <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>User Name</mat-label>
-            <input type="text" matInput formControlName="username"
-            [(ngModel)]="p_data.username"
-            >
-            
-            <mat-error *ngIf="updateForm.controls['username'].hasError('required')">
-                User Name  <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
+    <mat-dialog-content class="mat-typography">
+        <form class="example-form" [formGroup]="updateForm" >
+           
+                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Number OF Vaccines</mat-label>
+                <input type="number" matInput formControlName="numberofvaccines"
+                [(ngModel)]="p_data.numberofvaccines">
+                
+                <mat-error *ngIf="updateForm.controls['numberofvaccines'].hasError('required')">
+                    Number OF Vaccines <strong>required</strong>
+                </mat-error>
+                </mat-form-field>
+                <br>
+    
+        </form>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+        <button mat-button mat-dialog-close>Cancel</button>
+        <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="savedata()">Save</button>
+    </mat-dialog-actions>
+    
+    
+    
+    
+    </ng-template>
 
 
-            <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Phone Number</mat-label>
-            <input type="number" matInput formControlName="phonenumber"
-            [(ngModel)]="p_data.phonenumber"
-            >
-            
-            <mat-error *ngIf="updateForm.controls['phonenumber'].hasError('required')">
-                Phone Number <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-            <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Email</mat-label>
-            <input type="text" matInput formControlName="email"
-            [(ngModel)]="p_data.email">
-            
-            <mat-error *ngIf="updateForm.controls['email'].hasError('required')">
-                Email  <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-            
-            <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Password</mat-label>
-            <input type="text" matInput formControlName="password"
-            [(ngModel)]="p_data.password">
-            
-            <mat-error *ngIf="updateForm.controls['password'].hasError('required')">
-                Password <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-            
-            <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Age</mat-label>
-            <input type="number" matInput formControlName="age"
-            [(ngModel)]="p_data.age">
-            
-            <mat-error *ngIf="updateForm.controls['age'].hasError('required')">
-                Age <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-            <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Role id</mat-label>
-            <input type="number" matInput formControlName="roleid"
-            [(ngModel)]="p_data.roleid">
-            
-            <mat-error *ngIf="updateForm.controls['roleid'].hasError('required')">
-                Role id <strong>required</strong>
-            </mat-error>
-            </mat-form-field>
-            <br>
-
-            <input type="file" #file formControlName="image" [(ngModel)]="p_data.image" (change)="uploadfile(file.files)"> 
-    </form>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="savedata()">Save</button>
-</mat-dialog-actions>
-
-
-
-
-</ng-template>
-
-
-
+    
 <ng-template #callDeleteDailog>
 
     <h2> Are you want to delete this item ?</h2>
