--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -32,18 +32,12 @@
                  [disabled]="!email.valid || !password.valid"  class="btn btn-primary ">
 					<span class="button__text">  Login  </span>
 					<i class="button__icon fas fa-chevron-right"></i>
-				</button>				
+				</button>		
+				<h3 style="text-align:right; cursor: pointer;" (click)="goToregister()">Create a new account</h3>	
+		
 			</form >
 
-            <br> <br> <br>
-			<div class="social-login">
-				<h3>log in via</h3>
-				<div class="social-icons">
-					<a href="#" class="social-login__icon fab fa-instagram"></a>
-					<a href="#" class="social-login__icon fab fa-facebook"></a>
-					<a href="#" class="social-login__icon fab fa-twitter"></a>
-				</div>
-			</div>
+			
 		</div>
 		<div class="screen__background">
 			<span class="screen__background__shape screen__background__shape4"></span>
