--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -57,18 +57,13 @@
                  [disabled]="!registerForm.valid"  class="btn btn-primary ">
 					<span class="button__text">  Register Now  </span>
 					<i class="button__icon fas fa-chevron-right"></i>
-				</button>				
+				</button>			
+				<h3 style="text-align:right; cursor: pointer;" (click)="goTologin()">Already have account</h3>	
 			</form >
 
-            <br> <br> <br>
-			<!-- <div class="social-login">
-				<h3>log in via</h3>
-				<div class="social-icons">
-					<a href="#" class="social-login__icon fab fa-instagram"></a>
-					<a href="#" class="social-login__icon fab fa-facebook"></a>
-					<a href="#" class="social-login__icon fab fa-twitter"></a>
-				</div>
-			</div> -->
+ 				
+			 
+			
 		</div>
 		<div class="screen__background">
 			<span class="screen__background__shape screen__background__shape4"></span>
