--- a/src/app/admin/testmonial/testmonial.component.html
+++ b/src/app/admin/testmonial/testmonial.component.html
@@ -1,4 +1,4 @@
-<app-sidebar></app-sidebar>
+<!-- <app-sidebar></app-sidebar> -->
 <!--<form class="form-inline" style="margin-top: 3%;">
     <div class="form-group mx-sm-3 mb-2">
    <label for="inputText" class="sr- only">Testmonial Name</label>
