--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,12 @@
 
-    <div class="hero-v1">
+    <div class="hero-v1" *ngFor="let obj of home.allAbout">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-6 mr-auto text-center text-lg-left">
-              <span class="d-block subheading">About</span>
-              <h1 class="heading mb-3">About Us</h1>
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel a, nulla incidunt eaque sit praesentium porro consectetur optio!</p>
-              <p class="mb-4"><a href="#" class="btn btn-primary">How to prevent</a></p>
+              <span class="d-block subheading">{{obj.littletitle1}}</span>
+              <h1 class="heading mb-3">{{obj.title1}}</h1>
+              <p class="mb-5">{{obj.descriptiontitle1}}</p>
+              <p class="mb-4"><a href="#" class="btn btn-primary">{{obj.textbuttontitle1}}</a></p>
   
   
   
@@ -41,20 +41,20 @@
                 </div>
               </figure>
             </div>
-            <div class="col-lg-5 ml-auto">
-              <h2 class="mb-4 section-heading">What is Coronavirus?</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officia quas, modi sit eligendi numquam!</p>
+            <div class="col-lg-5 ml-auto" *ngFor="let obj of home.allAbout">
+              <h2 class="mb-4 section-heading">{{obj.whattitle}}</h2>
+              <p>{{obj.whatdescription}}</p>
               <ul class="list-check list-unstyled mb-5">
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Consectetur adipisicing elit</li>
-                <li>Unde doloremque</li>
+                <li>{{obj.whatdesc1}}</li>
+                <li>{{obj.whatdesc2}}</li>
+                <li>{{obj.whatdesc3}}</li>
               </ul>
-              <p><a href="#" class="btn btn-primary">Learn more</a></p>
+              <p><a href="#" class="btn btn-primary">{{obj.whattextbutton}}</a></p>
             </div>
           </div>
         </div>
       </div>
-  
+  <!--
       <div class="site-section">
         <div class="container">
           <div class="row mb-3">
@@ -109,7 +109,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
   
   
       <div class="site-section stats">
@@ -152,38 +152,32 @@
         </div>
       </div>
   
-      <div class="site-section">
+      <div class="site-section" *ngFor="let obj of home.allAbout">
         <div class="container">
           <div class="row mb-5">
             <div class="col-lg-7 mx-auto text-center">
-              <span class="subheading">What you need to do</span>
-              <h2 class="mb-4 section-heading">How To Protect Yourself</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officia quas, modi sit eligendi numquam!</p>
+              <span class="subheading">{{obj.littleprotecttitle}}</span>
+              <h2 class="mb-4 section-heading">{{obj.protecttitle}}</h2>
+              <p>{{obj.descprotect}}</p>
             </div>
           </div>
           <div class="row">
             <div class="col-lg-6 ">
               <div class="row mt-5 pt-5">
                 <div class="col-lg-6 do ">
-                  <h3>You should do</h3>
+                  <h3>{{obj.protectpoint1}}</h3>
                   <ul class="list-unstyled check">
-                    <li>Stay at home</li>
-                    <li>Wear mask</li>
-                    <li>Use Sanitizer</li>
-                    <li>Disinfect your home</li>
-                    <li>Wash your hands</li>
-                    <li>Frequent self-isolation</li>
+                    <li>{{obj.point1desc1}}</li>
+                    <li>{{obj.point1desc2}}</li>
+                    <li>{{obj.point1desc3}}</li>
                   </ul>
                 </div>
                 <div class="col-lg-6 dont ">
-                  <h3>You should avoid</h3>
+                  <h3>{{obj.protectpoint2}}</h3>
                   <ul class="list-unstyled cross">
-                    <li>Avoid infected people</li>
-                    <li>Avoid animals</li>
-                    <li>Avoid handshaking</li>
-                    <li>Aviod infected surfaces</li>
-                    <li>Don't touch your face</li>
-                    <li>Avoid droplets</li>
+                    <li>{{obj.point2desc1}}</li>
+                    <li>{{obj.point2desc2}}</li>
+                    <li>{{obj.point2desc3}}</li>
                   </ul>
                 </div>
               </div>
