--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -9,6 +9,7 @@
             <li><a routerLink="/admin/testmonial">Testmonial</a></li>
             <li><a routerLink="/admin/vaccinaiationcenter">Vaccinaiation Center</a></li>
             <li><a routerLink="/admin/manageHome">Manage Home</a></li>
+            <li><a routerLink="/admin/manageAbout">Manage About</a></li>
             <li><a routerLink="/admin/managereservation">Manage reservation</a></li>
 
           </ul>
