--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-new-dash></app-new-dash>
+<app-sidebar></app-sidebar>
 <main class="content">
 <nav class="navbar navbar-top navbar-expand navbar-dashboard navbar-dark ps-0 pe-2 pb-0">
     <div class="container-fluid px-0">
@@ -720,3 +720,4 @@
     </div>
  </div>
 </main>
+
