--- a/src/app/admin/manage-user/manage-user.component.html
+++ b/src/app/admin/manage-user/manage-user.component.html
@@ -1,4 +1,6 @@
+<app-sidebar></app-sidebar>
 
+<!-- 
 <link href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" />
 <nav class="pcoded-navbar">
@@ -54,10 +56,10 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav> -->
 <!-- [ navigation menu ] end -->
 <!-- [ Header ] start -->
-<header class="navbar pcoded-header navbar-expand-lg navbar-light">
+<!-- <header class="navbar pcoded-header navbar-expand-lg navbar-light">
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse1" href="javascript:"><span></span></a>
         <a href="/Dashboard/Dashboard" class="b-brand">
@@ -69,7 +71,7 @@
     </div>
     
    
-</header>
+</header> -->
 
 
 <div class="pcoded-main-container">
