--- a/src/app/doctor/manage-vaccine/manage-vaccine.component.html
+++ b/src/app/doctor/manage-vaccine/manage-vaccine.component.html
@@ -1,4 +1,5 @@
- <link href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css" rel="stylesheet" />
+<app-sidebar></app-sidebar>
+<!-- <link href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" />
 <nav class="pcoded-navbar">
     <div class="navbar-wrapper">
@@ -67,7 +68,7 @@
     </div>
     
    
-</header>
+</header> -->
 
 
 <div class="pcoded-main-container">
