--- a/src/app/doctor/accept/accept.component.html
+++ b/src/app/doctor/accept/accept.component.html
@@ -54,7 +54,7 @@
         <td>{{obj.massage}}</td>
         <td>{{obj.status}}</td>
         <td>
-         <button (click)="openUpdateDailog(obj.reserveid,obj.status,obj.massage,obj.actualdatedose1,obj.actualdatedose2
+         <button (click)="openUpdateDailog(obj.userid,obj.reserveid,obj.status,obj.massage,obj.actualdatedose1,obj.actualdatedose2
          )">Update</button> 
          <!-- <button (click)="openDeleteDailog(obj.userid)">Delete</button>   -->
 
