--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,22 +1,58 @@
 
-<div class="container">
-	<div class="screen">
-		<div class="screen__content">
-			<form class="login" [formGroup]="registerForm" >
- 
-				<mat-form-field >
- 						<input   type="text" name="name"  matInput   formControlName="firstname" class="login__input" placeholder="First Name">
-					 
-					</mat-form-field >
-	            
-				  <mat-form-field >
- 							<input   type="text" name="name"  matInput    formControlName="lastname" class="login__input" placeholder="Last Name">
-						 
-				</mat-form-field >  
 
 
+<section class="vh-lg-100 mt-5 mt-lg-0 bg-soft d-flex align-items-center" style="background-image:url(https://www.kennedypartnerslawyers.com.au/assets/uploads/2020/04/fusion-medical-animation-EAgGqOiDDMg-unsplash-scaled.jpg); height: 100px;  background-position: center;
+background-repeat: no-repeat;
+background-size: cover; ">
+    <div class="container">
+       <div class="row justify-content-center form-bg-image" data-background-lg="assets/img/signin.svg">
+          <div class="col-12 d-flex align-items-center justify-content-center">
+             <div class="bg-white shadow border-0 rounded border-light p-4 p-lg-5 w-100 fmxw-500">
+                <div class="text-center text-md-center mb-4 mt-md-0">
+                   <h1 class="mb-0 h3">Create Account</h1>
+                </div>
+                <form   [formGroup]="registerForm" class="mt-4">
+                  <div class="form-group mb-4">
+                     <!-- <label for="email">First Name</label> -->
+                     <div class="input-group">
+                        <!-- <span class="input-group-text" id="basic-addon1">
+                           <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
+                              <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
+                           </svg>
+                        </span> -->
+                        <mat-form-field >
+                           <input   type="text" name="name"  matInput   formControlName="firstname" class="login__input" placeholder="First Name">
+                        
+                       </mat-form-field >                     </div>
+                  </div>
 
-				  <mat-form-field >
+                  <div class="form-group mb-4">
+                     <!-- <label for="email">Last Name</label> -->
+                     <div class="input-group">
+                        <!-- <span class="input-group-text" id="basic-addon1">
+                           <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
+                              <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
+                           </svg>
+                        </span> -->
+                        <mat-form-field >
+                           <input   type="text" name="name"  matInput    formControlName="lastname" class="login__input" placeholder="Last Name">
+                        
+                 </mat-form-field >                       </div>
+                  </div>
+
+
+                   <div class="form-group mb-4">
+                      <!-- <label for="email">Your Email</label> -->
+                      <div class="input-group">
+                         <!-- <span class="input-group-text" id="basic-addon1">
+                            <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                               <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
+                               <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
+                            </svg>
+                         </span> -->
+ <mat-form-field >
  					<input id="email"  type="email" name="email"  matInput    formControlName="email" class="login__input" placeholder="Email">
 					<mat-error *ngIf="registerForm.controls['email'].hasError('email') ">
 						Please Enter a valid Email
@@ -24,10 +60,20 @@
 					  <mat-error *ngIf="registerForm.controls['email'].hasError('required')" >
 					   Email is <strong>Required</strong>
 					  </mat-error>
- 		    	</mat-form-field >  
+ 		    	</mat-form-field >                        </div>
+                   </div>
 
 
-			<mat-form-field >
+                   <div class="form-group">
+                      <div class="form-group mb-4">
+                         <!-- <label for="password">Your Password</label> -->
+                         <div class="input-group">
+                            <!-- <span class="input-group-text" id="basic-addon2">
+                               <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                  <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd"></path>
+                               </svg>
+                            </span> -->
+<mat-form-field >
 					<input id="password" type="password" name="password" matInput formControlName="password" (change)="matchError()"  class="login__input" placeholder="Password">
 					<br> 
 					<mat-error *ngIf="registerForm.controls['password'].hasError('minlength') ">
@@ -36,40 +82,39 @@
 					  <mat-error *ngIf="registerForm.controls['password'].hasError('required')" >
 						Password is <strong>Required</strong>
 					  </mat-error>
-			</mat-form-field>
-
-			<mat-form-field >
-				<input type="password"  matInput formControlName="confirmPassword"  (change)="matchError()">
-				<label>Confirm Passwprd</label>
-				<mat-error *ngIf="registerForm.controls['confirmPassword'].hasError('minLength') ">
-				  Please enter a strong Password 
-				</mat-error>
-				<mat-error  *ngIf="registerForm.controls['confirmPassword'].hasError('required')">
-					Password is <strong>required</strong>
-				</mat-error>
-				<mat-error  *ngIf="registerForm.controls['confirmPassword'].hasError('mismatch')">
-			  Confirm Password is <strong>not match with password value</strong>
-			  </mat-error>
-			  </mat-form-field>
-
-            <br> <br>
-				<button style="background-color: rgb(62, 31, 91);" class="button login__submit"   (click)="submit()"
-                 [disabled]="!registerForm.valid"  class="btn btn-primary ">
-					<span class="button__text">  Register Now  </span>
-					<i class="button__icon fas fa-chevron-right"></i>
-				</button>			
-				<h3 style="text-align:right; cursor: pointer;" (click)="goTologin()">Already have account</h3>	
-			</form >
-
- 				
-			 
-			
-		</div>
-		<div class="screen__background">
-			<span class="screen__background__shape screen__background__shape4"></span>
-			<span class="screen__background__shape screen__background__shape3"></span>		
-			<span class="screen__background__shape screen__background__shape2"></span>
-			<span class="screen__background__shape screen__background__shape1"></span>
-		</div>		
-	</div>
-</div>
+			</mat-form-field>                         </div>
+                      </div>
+                      <div class="form-group mb-4">
+                         <!-- <label for="confirm_password">Confirm Password</label> -->
+                         <div class="input-group">
+                            <!-- <span class="input-group-text" id="basic-addon2">
+                               <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                  <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd"></path>
+                               </svg>
+                            </span> -->
+                            <mat-form-field >
+                              <input type="password"  matInput formControlName="confirmPassword"  (change)="matchError()" placeholder="Confirm Passwprd">
+                              
+                              <mat-error *ngIf="registerForm.controls['confirmPassword'].hasError('minLength') ">
+                                Please enter a strong Password 
+                              </mat-error>
+                              <mat-error  *ngIf="registerForm.controls['confirmPassword'].hasError('required')">
+                                 Password is <strong>required</strong>
+                              </mat-error>
+                              <mat-error  *ngIf="registerForm.controls['confirmPassword'].hasError('mismatch')">
+                             Confirm Password is <strong>not match with password value</strong>
+                             </mat-error>
+                             </mat-form-field>                         </div>
+                      </div>
+                      <div class="mb-4">
+                      </div>
+                   </div>
+                   <div class="d-grid"><button type="submit" class="btn btn-gray-800">Sign up</button></div>
+                </form>
+              
+                <div class="d-flex justify-content-center align-items-center mt-4"><span class="fw-normal">Already have an account? <a  style="cursor: pointer;" (click)="goTologin()" class="fw-bold">Login here</a></span></div>
+             </div>
+          </div>
+       </div>
+    </div>
+ </section>
