--- a/src/app/map-marker/map-marker.component.html
+++ b/src/app/map-marker/map-marker.component.html
@@ -1,4 +1,4 @@
-<google-map height="400px"
+<!-- <google-map height="400px"
             width="750px"
             [center]="center"
             [zoom]="zoom"
@@ -7,4 +7,4 @@
               [position]="markerPosition"
               [options]="markerOptions"></map-marker>
               
-</google-map>
+</google-map> -->
