--- a/src/app/google-maps/google-maps.component.html
+++ b/src/app/google-maps/google-maps.component.html
@@ -1,4 +1,4 @@
-<google-map height="400px"
+<!-- <google-map height="400px"
             width="1000px"
             [center]="center"
             [zoom]="zoom"
@@ -7,4 +7,4 @@
 </google-map>
 
 <div>Latitude: {{display?.lat}}</div>
-<div>Longitude: {{display?.lng}}</div>
+<div>Longitude: {{display?.lng}}</div> -->
