--- a/src/app/map-window/map-window.component.html
+++ b/src/app/map-window/map-window.component.html
@@ -1,4 +1,4 @@
-<google-map height="400px"
+<!--<google-map height="400px"
             width="750px"
             [center]="center"
             [zoom]="zoom"
@@ -11,4 +11,4 @@
 </google-map>
 
 <div>Latitude: {{display?.lat}}</div>
-<div>Longitude: {{display?.lng}}</div>
+<div>Longitude: {{display?.lng}}</div> -->
